package com.directi.training.isp.exercice_refactor;
public interface Door {
    void lock();
    void unlock();
    void open();
    void close();
}

