package com.directi.training.isp.exercice_refactor;

public interface ProximitySensorClient {
    void proximityCallback();
}