package com.directi.training.isp.exercice_refactor;

public interface TimerClient {
    void timeOutCallback();
}